Made API responses consistent and added balance calculation (#26)
* make api responses consistent

* Updated accounts API to return balance

* Updated docs
