# docs/docs/swagger.yaml
@@ -736,9 +736,18 @@ components:
           example: 2024-10-07T01:02:03Z
           readOnly: true
     Groups:
-      type: array
-      items:
-        $ref: '#/components/schemas/Group'
+      type: object
+      properties:
+        total:
+          type: integer
+          format: int64
+          example: 10
+          readOnly: true
+        groups:
+          readOnly: true
+          type: array
+          items:
+            $ref: '#/components/schemas/Group'
     Category:
       type: object
       properties:
@@ -768,9 +777,18 @@ components:
           example: 2024-10-07T01:02:03Z
           readOnly: true
     Categories:
-      type: array
-      items:
-        $ref: '#/components/schemas/Category'
+      type: object
+      properties:
+        total:
+          type: integer
+          format: int64
+          example: 10
+          readOnly: true
+        categories:
+          readOnly: true
+          type: array
+          items:
+            $ref: '#/components/schemas/Category'
     Account:
       type: object
       properties:
@@ -791,6 +809,11 @@ components:
         adapter:
           type: string
           example: "icici"
+        balance:
+          type: number
+          format: float
+          multipleOf: 0.2
+          example: 12.25
         createdAt:
           type: string
           format: date-time
@@ -827,9 +850,18 @@ components:
           example: 2024-10-07T01:02:03Z
           readOnly: true
     Payees:
-      type: array
-      items:
-        $ref: '#/components/schemas/Payee'
+      type: object
+      properties:
+        total:
+          type: integer
+          format: int64
+          example: 10
+          readOnly: true
+        groups:
+          readOnly: true
+          type: array
+          items:
+            $ref: '#/components/schemas/Payee'
     Adapter:
       type: object
       properties:
@@ -910,7 +942,7 @@ components:
           format: int64
           example: 10
           readOnly: true
-        accountId:
+        transactions:
           readOnly: true
           type: array
           items:
